# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[metadata]
name = miniascape
#version = attr: miniascape.globals.VERSION
description = Personal cloud building and management tool
long_description =
    Miniascape is a template compiler optimized for specific purpose to
    generate collection of configuration files for virt. host, script to build
    VMs, and misc data for VMs, to setup libvirt based virtualization
    environment (virtualization 'miniascape') to build VMs quickly and easily.
author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = GPLv3+
url = https://github.com/ssato/miniascape
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Operating System :: OS Independent
    Topic :: Utilities
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
include_package_data = True
packages = find:

# minimum dependencies.
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    miniascape = miniascape.cli:main
