pkglibexecdir	= @libexecdir@/@PACKAGE@
dist_pkglibexec_SCRIPTS = \
fence_key-create \
hosts_update.py \
kspassword.py \
package.py \
pre-uninstall \
post-install \
post-update \
net-configure.py \
net-install.py \
net-register \
net-unregister

DISTCLEANFILES = package.py pre-uninstall net-register net-unregister
