pkglibexecdir	= @libexecdir@/@PACKAGE@
dist_pkglibexec_SCRIPTS = \
fence_key-create \
kspassword.py \
package.py \
net-configure.py \
net-install.py \
net-register \
net-unregister \
virtinst.py

dist_sbin_SCRIPTS = miniascape


DISTCLEANFILES = package.py pre-uninstall miniascape net-register net-unregister
